use Base64 in sun package to support android and java code execution